# rustbelt

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: command.rs  main.rs  repl.rs
crates/librustbelt/: Cargo.toml
crates/librustbelt/src/: analyzer.rs  builder.rs  entities.rs  file_watcher.rs  lib.rs  utils.rs
crates/librustbelt/tests/: cursor_coordinates_test.rs  integration_tests.rs  rename_symbol_test.rs
crates/librustbelt/tests/sample-project/: Cargo.toml  SAMPLE.md
crates/librustbelt/tests/sample-project/src/: main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/mcp/src/ruskel/: mod.rs  ruskel-description.txt
crates/mcp/tests/: mcp_server_tests.rs  ruskel_tests.rs
src/: analyzer.rs  lib.rs  main.rs
src/ruskel/: mod.rs  ruskel_analyzer.rs
tests/: integration_test.rs  integration_tests.rs  ruskel_tests.rs
tests/sample-project/: SAMPLE.md
