[package]
name = "rustbelt"
version = "0.0.1"
edition = "2024"
authors = ["David Gomez Urquiza <d@davo.io>"]
description = "A set of Rust specific tools to provide enhanced tools via the MCP protocol. These tools provide IDE functionality like type hints, go-to-definition, and semantic analysis."
license = "MIT"
repository = "https://github.com/tenxhq/rustbelt"
readme = "README.md"
keywords = ["lsp", "mcp", "rust-analyzer", "AI assistance"]

[dependencies]
# rust-analyzer core functionality
ra_ap_base_db = "0.0.288"
ra_ap_cfg = "0.0.288"
ra_ap_ide = "0.0.288"
ra_ap_ide_db = "0.0.288"
ra_ap_intern = "0.0.288"
ra_ap_project_model = "0.0.288"
ra_ap_syntax = "0.0.288"
ra_ap_vfs = "0.0.288"
ra_ap_vfs-notify = "0.0.288"

# rust-analyzer transitive dependencies
triomphe = "0.1"
crossbeam-channel = "0.5"

# MCP support
tenx-mcp = { git = "https://github.com/tenxhq/tenx-mcp.git", rev = "5ee6c00"}

# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
bimap = "0.6.3"

# Rust code skeleton generation
libruskel = "0.0.10"

[[bin]]
name = "rustbelt"
path = "src/main.rs"
