[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["David Gomez Urquiza <d@davo.io>"]
description = "MCP server for rustbelt providing Rust development tools via MCP protocol"
license = "MIT"
repository = "https://github.com/tenxhq/rustbelt"
keywords = ["lsp", "mcp", "rust-analyzer"]


[workspace]
members = ["crates/*"]
resolver = "2"
exclude = ["crates/librustbelt/tests/sample-project"]

[workspace.dependencies]
# rust-analyzer core functionality
ra_ap_base_db = "0.0.289"
ra_ap_cfg = "0.0.289"
ra_ap_ide = "0.0.289"
ra_ap_ide_db = "0.0.289"
ra_ap_intern = "0.0.289"
ra_ap_project_model = "0.0.289"
ra_ap_syntax = "0.0.289"
ra_ap_vfs = "0.0.289"
ra_ap_vfs-notify = "0.0.289"
ra_ap_load-cargo = "0.0.289"

# rust-analyzer transitive dependencies
triomphe = "0.1"
crossbeam-channel = "0.5"

# Async runtime
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"


# Build dependencies
vergen-gix = { version = "1.0.9", features = ["build"] }

[profile.dev]
# Make dev behave like release
opt-level = 2
debug = false