[package]
name = "rustbelt-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
librustbelt = { path = "../librustbelt", features = ["schemars"] }

# MCP support

tenx-mcp = { git = "https://github.com/tenxhq/tenx-mcp.git", rev = "d671470"}

# Rust code skeleton generation
libruskel = { git = "https://github.com/cortesi/ruskel.git", rev = "57ad247"}

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Build dependencies for version info
[build-dependencies]
anyhow = { workspace = true }
vergen-gix = { workspace = true }
